# glauth-k8s-operator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  charmcraft.yaml  config.yaml  integration-requirements.txt  lint-requirements.txt  metadata.yaml  pyproject.toml  requirements.txt  tox.ini  unit-requirements.txt
.github/workflows/: ci.yaml  on_pull_request.yaml  on_push.yaml  on_schedule.yaml  promote.yaml  publish.yaml  release.yaml  release_libs.yaml  test.yaml  tests.yaml  tiobe.yaml  update_libs.yaml
lib/charms/glauth_k8s/v0/: glauth_endpoint.py  ldap.py
lib/charms/glauth_utils/v0/: glauth_auxiliary.py
lib/charms/observability_libs/v0/: kubernetes_compute_resources_patch.py
lib/charms/observability_libs/v1/: cert_handler.py
lib/charms/tls_certificates_interface/v3/: tls_certificates.py
lib/charms/tls_certificates_interface/v4/: tls_certificates.py
src/: charm.py  configs.py  constants.py  database.py  exceptions.py  integrations.py  kubernetes_resource.py  utils.py  validators.py
src/grafana_dashboards/: glauth.json.tmpl
src/loki_alert_rules/: glauth_high_severity_log.rule
src/prometheus_alert_rules/: glauth_unavailable.rule
templates/: glauth.cfg.j2  glauth.yaml.j2
terraform/: MODULE_SPECS.md  README.md  main.tf  outputs.tf  variables.tf  versions.tf
tests/integration/: conftest.py  db.sql  test_charm.py  tester.py
tests/unit/: conftest.py  test_charm.py  test_ldap_requirer.py  test_utils.py  test_validators.py
