# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "glauth-k8s-operator"
version = "0.1.0"
description = "A Charmed Operator for running GLAuth on Kubnernetes"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

dynamic = ["version"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
line-length = 99
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "lib/charms/glauth_k8s/**/.py"]
extend-exclude = ["__pycache__", "*.egg_info"]

[too.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = ["D100", "D101", "D102", "D103", "D105", "D107", "E501", "N818"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
pretty = true
mypy_path = "./src:./lib/:./tests"
# Exclude non-glauth libraries
exclude = 'lib/charms/((?!glauth_k8s/).)'
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
allow_redefinition = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

# Ignore libraries that do not have type hint nor stubs
[[tool.mypy.overrides]]
module = ["ops.*", "pytest.*", "pytest_operator.*", "urllib3.*", "jinja2.*", "lightkube.*", "pytest_mock.*"]
